# pyclipper2

./: .gitignore  README.md  meson.build  pyclipper2.code-workspace  pyproject.toml
.github/workflows/: publish.yml
data/shapes/: 0_53_shape.pickle  1000_815_shape.pickle  1001_813_shape.pickle  1002_811_shape.pickle  1003_813_shape.pickle  1004_813_shape.pickle  1005_813_shape.pickle  1006_815_shape.pickle  1007_813_shape.pickle  1008_811_shape.pickle  1009_809_shape.pickle  100_177_shape.pickle  1010_808_shape.pickle  1011_805_shape.pickle  1012_806_shape.pickle  1013_805_shape.pickle  1014_806_shape.pickle  1015_806_shape.pickle  1016_807_shape.pickle  1017_807_shape.pickle  1018_808_shape.pickle  1019_809_shape.pickle  101_178_shape.pickle  1020_810_shape.pickle  1021_810_shape.pickle  1022_811_shape.pickle  1023_812_shape.pickle  1024_813_shape.pickle  1025_814_shape.pickle  1026_816_shape.pickle  1027_817_shape.pickle  1028_818_shape.pickle  1029_818_shape.pickle  102_181_shape.pickle  1030_818_shape.pickle  1031_816_shape.pickle  1032_816_shape.pickle  1033_814_shape.pickle  1034_813_shape.pickle  1035_813_shape.pickle  (+2032 more)
notebooks/: speed_comparison.ipynb
pyclipper2/: bindings.cpp
scripts/: pyclipper2_vs_shapely.py
src/: bindings.cpp
src/pyclipper2/: __init__.py
tests/: functions.py  test_bindings.py  test_vs_shapely.py
