[project]
name = "pyclipper2"
dynamic = ['version']

[build-system]
requires = ['meson-python']

build-backend = 'mesonpy'

[dependency-groups]
dev = [
    "nanobind>=2.9.2", ### we add nanobind here for stub generation
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.pyright]
exclude = ["subprojects", ".venv"]
